@@ -24,7 +24,7 @@ include $(top_srcdir)/build-aux/libtool.mk
 include $(top_srcdir)/build-aux/pkg-config.mk
 include $(top_srcdir)/build-aux/git-version-gen.mk
 
-#include $(top_srcdir)/build-aux/rpm.mk
+include $(top_srcdir)/build-aux/rpm.mk
 
 
 SF_PROJECT_ID=roboptim
